enum UnitMeasurement { hour, meter, squareMeter, cubicMeter, piece, flatRate }
