enum QuoteStatus { draft, sent, accepted, rejected }
